Simplified solution for Part 1 of Day 1. Minor tweaks to gradle config.

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,11 @@ sourceSets {
             srcDirs("src/main/resources")
         }
     }
+    test {
+        resources {
+            srcDirs("src/test/resources")
+        }
+    }
 }
 
 compileKotlin {
